--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "js-yaml": "^4.0.0",
+    "lodash": "^4.17.21",
     "openapi-to-postmanv2": "^2.3.0",
     "swagger2openapi": "^7.0.5"
   }
